Correcion modelo doc operadora ministerio

--- a/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-ministerio/documento-ministerio.component.html
@@ -130,7 +130,7 @@
                 </ul>
               </td>
               <td>{{doc.fechaOficio  | date:'dd/MM/yyyy'}} </td>
-              <td>{{doc.asunto}} </td>
+              <td>{{doc.asunto.asunto}} </td>
               <td>{{doc.numeroResolucion}} </td>
               <td>{{doc.objetivo}} </td>
               <td>{{doc.estado}} </td>
