--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
@@ -1,5 +1,5 @@
 
-<h1>Verificación de Pozo Productor</h1>
+<h1>EditarVerificación de Pozo Productor</h1>
 
 <p-fieldset legend="Datos del portafolio" [toggleable]="true">
     <div class="row mt-1">
@@ -253,22 +253,22 @@
 <br>
 
 <div class="row">
-  <div class="col-md-6">
-    <div class="row">
-      <div class="col-md-4">
-        <label for="verificacionFechas"><b>Justificado:*</b></label>
-      </div>
-      <div class="col-md">
-        
-          <p-dropdown [options]="justificadoList" [(ngModel)]="verificacionProduccion.justificado" readonly></p-dropdown>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="verificacionFechas"><b>Porcentaje de Control :</b></label>
+        </div>
+        <div class="col-md">
+          
+            <p class="label">{{verificacionProduccion.porcentajeControl}}%</p>
+        </div>
       </div>
     </div>
-  </div>
 
     <div class="col-md-6">
       <div class="row">       
         <div class="col-md-4">
-          <label for="verificacionProduccion"><b>Porcentaje de Control :</b></label>
+          <label for="verificacionProduccion"><b>Porcentaje de Incremento / Disminución :</b></label>
         </div>
         <div class="col-md">
             <p class="label">{{verificacionProduccion.PorcentajeMostrar}}%</p>
@@ -283,11 +283,11 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-4">
-             
+              <label for="verificacionFechas"><b>Justificado:*</b></label>
             </div>
             <div class="col-md">
               
-              
+                <p-dropdown [options]="justificadoList" [(ngModel)]="verificacionProduccion.justificado" readonly></p-dropdown>
             </div>
           </div>
         </div>
@@ -298,7 +298,7 @@
               <label for="verificacionProduccion"><b>Valoración:*</b></label>
             </div>
             <div class="col-md">
-                <p class="label">{{verificacionProduccion.descripcionValoracion }}</p>
+                <p class="label">{{verificacionProduccion.descripcionValoracion}}</p>
             </div>
           </div>
         </div>
@@ -359,65 +359,20 @@
       </div>
     </div>
 
-</p-fieldset>
-</div>
-</div>
 
-<div class="row">
-    <div class="col-md-4"></div>
-   
-  <div class="col-md-4">
+
+
+    <div class="row">
+      <div class="col-md-4"></div>
      
-    <button pButton type="button" label="Guardar" class="ui-button-success" (click)="guardar()">
+    <div class="col-md-8">
+       
+      <button pButton type="button" label="Guardar" class="ui-button-success" (click)="guardar()">
+      </button>
+    <button pButton type="button" label="Volver" class="ui-button-warning" (click)="volver()">
     </button>
-
-
   </div>
-  <div class="col-md-4"></div>
-</div>
-
-<br>
-<p-fieldset legend="Resultados" [toggleable]="true">
-
-  <div class="row">
-    <div class="col-md-12">
-      <table class="table table-bordered table-sm">
-        <thead>
-          <tr>
-
-            <th>Nro. Verificacion</th>
-            <th>Valor Antes</th>
-            <th>Valor Despues</th>
-            <th>Porcentaje Control</th>
-            <th>Valoracion</th>
-            <th>Justificado</th>
-            <th>Estado</th>
-            <th>Fecha Actualización</th>
-            <th>Editar</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let verificacionProduccion of produccionList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
-
-            <td>{{verificacionProduccion.codVerificacion}} </td>
-            <td>{{verificacionProduccion.valor_antes}} </td>
-            <td>{{verificacionProduccion.valor_despues}} </td>
-            <td>{{verificacionProduccion.porcentajeControl}} </td>
-            <td>{{verificacionProduccion.valoracion |ValoracionProduccion }} </td>
-            <td>{{verificacionProduccion.justificado | JustificadoBitacora}} </td>
-            <td>{{verificacionProduccion.estado| estadoBitacora}} </td>
-            <td>{{verificacionProduccion.fecha_actualizacion | date:'dd/MM/yyyy'}} </td>
-            <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="editarProduccion(verificacionProduccion,produccion);"></i>            
-          </td>
-          </tr>
-
-        </tbody>
-      </table>
-    </div>
-
   </div>
-
-</p-fieldset>
+ 
 
 
